assignment of all javascript
assignment of all javascript

--- a/14_global_variables.html
+++ b/14_global_variables.html
@@ -7,8 +7,19 @@
 <body>
 <h3> Understanding Global Variables</h3>
 <script>
-    var aaazzz = "Test";
-    
-</script>
+   // if (true) {
+       // var aaa =  "Test" ;      
+    // }
+     // console.log(aaa);
+     
+     //if (true) {
+        //var aaazzz = "Test"; // it has global scope 
+   // }
+  // console.log(aaa);
+
+  var aaazzz = "Test"; // it has global scope
+  console.log(aaa);    
+ 
+ </script>
 </body>
 </html>
