--- a/14_sessionStorage.html
+++ b/14_sessionStorage.html
@@ -2,15 +2,17 @@
 <html>
 
 <head>
-    <title> Global Variables </title>
+    <title> Session Storage </title>
 </head>
 <body>
 <h3> Understanding Session Storage</h3>
 <script>
-    window.sessionStorage.setItem("sachin","Mumbai")
-    window.sessionStorage.setItem("Annu","")
-    window.sessionStorage.setItem("Kashi","Pandharpur")
-    window.sessionStorage.setItem("Emran","Pune")
+   
+   window.sessionStorage.setItem("sachin","Mumbai");
+   window.sessionStorage.setItem("Annu","Sangola");
+   window.sessionStorage.setItem("Kashi","Pandharpur");
+    window.sessionStorage.setItem("Emran","Pune");
+    window.sessionStorage.removeItem("Kashi");
 </script>
 </body>
 </html>
